init: chmod bldrlog to 444 to capture bldrlog
Apply 'Bootloader Log' section in dumpstate_board.txt

Bug: 140221183
Change-Id: I6df26fbf913180af5054985b41e1cf8651ebc6de
Signed-off-by: Jone Chou <jonechou@google.com>

--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -463,6 +463,10 @@ on property:sys.boot_completed=1
     chown system system /dev/iaxxx-module-celldrv
     chmod 0660 /dev/iaxxx-module-celldrv
 
+    # Permission for bootloader logs
+    chown root log /proc/bldrlog
+    chmod 0444 /proc/bldrlog
+
 service vendor.per_mgr /vendor/bin/pm-service
     class core
     user system
