--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -328,15 +328,17 @@ on early-boot
     chown system system /sys/class/leds/vibrator/device/vbatt_max
     chown system system /sys/class/leds/vibrator/device/vbatt_min
 
-    # Permission for Rainbow sensor
-    chown system system /sys/devices/platform/soc/ac4b000.qcom,cci/ac4b000.qcom,cci:st,rainbow@20/rainbow_enable
-    chmod 0660 /sys/devices/platform/soc/ac4a000.qcom,cci/ac4a000.qcom,cci:qcom,rainbow@20/rainbow_enable
-    chown system system /sys/devices/platform/soc/ac4b000.qcom,cci/ac4b000.qcom,cci:st,rainbow@20/rainbow_read_byte
-    chmod 0660 /sys/devices/platform/soc/ac4a000.qcom,cci/ac4a000.qcom,cci:qcom,rainbow@20/rainbow_read_byte
-    chown system system /sys/devices/platform/soc/ac4b000.qcom,cci/ac4b000.qcom,cci:st,rainbow@20/rainbow_write_byte
-    chmod 0660 /sys/devices/platform/soc/ac4b000.qcom,cci/ac4b000.qcom,cci:st,rainbow@20/rainbow_write_byte
+    # Permission for rainbow sensor
+    chown system system /sys/devices/platform/soc/994000.i2c/i2c-3/3-0020/rainbow_enable
+    chmod 0660 /sys/devices/platform/soc/994000.i2c/i2c-3/3-0020/rainbow_enable
+    chown system system /sys/devices/platform/soc/994000.i2c/i2c-3/3-0020/rainbow_read_byte
+    chmod 0660 /sys/devices/platform/soc/994000.i2c/i2c-3/3-0020/rainbow_read_byte
+    chown system system /sys/devices/platform/soc/994000.i2c/i2c-3/3-0020/rainbow_write_byte
+    chmod 0660 /sys/devices/platform/soc/994000.i2c/i2c-3/3-0020/rainbow_write_byte
     chown system system /dev/vd6281
     chmod 0660 /dev/vd6281
+    chown system system /mnt/vendor/persist/camera/rals_fac_test
+    chmod 0660 /mnt/vendor/persist/camera/rals_fac_test
 
     # Permission for Athletico
     chown system system /dev/sensor_tunnel
