thermal: update skin-therm-monitor for thermal hal
Bug: 140849982
Test: Build
Change-Id: I1c20069a13fd0ca63c581ff33f31e7fcf6abf3e6
Signed-off-by: mandyshen <mandyshen@google.com>

--- a/thermal_info_config_bramble.json
+++ b/thermal_info_config_bramble.json
@@ -196,7 +196,7 @@
             "Multiplier":0.001
         },
         {
-            "Name":"wifi-therm-monitor",
+            "Name":"skin-therm-monitor",
             "Type":"SKIN",
             "HotThreshold":[
                 "NAN",
