init.recovery.device.rc: limit discard size to 128MB
limit UFS discard size to avoid UFS unmap timeout issue

Bug: 146203801
Test: print log in recovery mode
Change-Id: I484b44abc1e14a19a7dd753e927c52af3565fe65
Signed-off-by: Randall Huang <huangrandall@google.com>

--- a/init.recovery.device.rc
+++ b/init.recovery.device.rc
@@ -8,3 +8,7 @@ on init
     write /sys/module/msm_poweroff/parameters/warm_reset 1
     # Enable thermal mitigation
     write /sys/devices/virtual/thermal/tz-by-name/backup-charge/mode enabled
+
+    # Block layer tuning: discard chunk size up to 128MB
+    # Otherwise, contiguous discards can be merged
+    write /sys/block/sda/queue/discard_max_bytes 134217728
