--- a/dumpstate/android.hardware.dumpstate@1.1-service.bramble.rc
+++ b/dumpstate/android.hardware.dumpstate@1.1-service.bramble.rc
@@ -1,8 +1,9 @@
-service vendor.dumpstate-1-0 /vendor/bin/hw/android.hardware.dumpstate@1.0-service.bramble
+service vendor.dumpstate-1-1 /vendor/bin/hw/android.hardware.dumpstate@1.1-service.bramble
     class hal
     user system
     group system vendor_rfs
     interface android.hardware.dumpstate@1.0::IDumpstateDevice default
+    interface android.hardware.dumpstate@1.1::IDumpstateDevice default
     oneshot
     disabled
 
