vibrator: Switch from HIDL to AIDL
Bug: 148249136
Test: VTS, Unit Test
Change-Id: Ifbcfd1358161a5643bafc6e5314311a282e70a47
Signed-off-by: Harpreet \"Eli\" Sangha <eliptus@google.com>

--- a/vibrator/drv2624/android.hardware.vibrator-service.bramble.rc
+++ b/vibrator/drv2624/android.hardware.vibrator-service.bramble.rc
@@ -1,4 +1,4 @@
-service vendor.vibrator-1-3 /vendor/bin/hw/android.hardware.vibrator@1.3-service.bramble
+service vendor.vibrator.bramble /vendor/bin/hw/android.hardware.vibrator-service.bramble
     class hal
     user system
     group system
