--- a/bramble/init.bramble.rc
+++ b/bramble/init.bramble.rc
@@ -18,6 +18,7 @@ import /vendor/etc/init/hw/init.${ro.boot.hardware.platform}.rc
 
 on property:vendor.all.modules.ready=1
     chown system system /sys/class/spi_master/spi0/spi0.0/stm_fts_cmd
+    chown system system /sys/class/spi_master/spi0/spi0.0/audio_status
 
 service vendor.mdm_helper /vendor/bin/mdm_helper
     class core
