--- a/init.insmod.bramble.cfg
+++ b/init.insmod.bramble.cfg
@@ -15,4 +15,4 @@ enable|/sys/kernel/boot_adsp/boot
 enable|/sys/kernel/boot_cdsp/boot
 
 # All devices enabled
-setporp|vendor.all.devices.ready
+setprop|vendor.all.devices.ready
