thermal: add B5M thermal HAL config
- Add camera-critial tz
- Revise skin-therm-monitor hysteresis as legacy Pixels

Bug: 148993800
Bug: 158540724
Test: lshal debug android.hardware.thermal@2.0::IThermal/default
Change-Id: I2dbd2acbe59eaab773a7139d1516874c0024af6d
Signed-off-by: mandyshen <mandyshen@google.com>

--- a/bramble/init.bramble.rc
+++ b/bramble/init.bramble.rc
@@ -23,3 +23,7 @@ on property:vendor.all.modules.ready=1
 service vendor.mdm_helper /vendor/bin/mdm_helper
     class core
     group system wakelock
+
+# Override thermal HAL config for B5M
+on property:ro.boot.hardware.majorid=0x0F
+    setprop vendor.thermal.config thermal_info_config_m.json
