--- a/init.insmod.bramble.cfg
+++ b/init.insmod.bramble.cfg
@@ -3,6 +3,11 @@
 # This file contains kernel modules to load #
 # at init time by init.insmod.sh script     #
 #############################################
+
+# Load kernel modules
+modprobe|-b *
+modprobe|ftm5.ko
+
 # All modules loaded
 setprop|vendor.all.modules.ready
 
