--- a/usb/gadget/android.hardware.usb.gadget-service.bramble.rc
+++ b/usb/gadget/android.hardware.usb.gadget-service.bramble.rc
@@ -1,4 +1,4 @@
-service vendor.usb-hal-1-3 /vendor/bin/hw/android.hardware.usb@1.3-service.bramble
+service vendor.usb-gadget-hal-1-1 /vendor/bin/hw/android.hardware.usb.gadget-service.bramble
     class hal
     user system
     group system shell mtp
