--- a/bramble/init.bramble.rc
+++ b/bramble/init.bramble.rc
@@ -38,6 +38,7 @@ on property:debug.touch_sensitivity_mode=1
 service vendor.mdm_helper /vendor/bin/mdm_helper
     class core
     group system wakelock
+    user root
 
 on late-init
     chown system system /sys/devices/virtual/thermal/tz-by-name/skin-therm-monitor/trip_point_0_temp
